@@ -1,3 +1,13 @@
+2012-11-07  Andrey Adaikin  <aandrey@chromium.org>
+
+        Web Inspector: [Canvas] closure compiler fixes
+        https://bugs.webkit.org/show_bug.cgi?id=101459
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/InjectedScriptCanvasModuleSource.js:
+        (.):
+
 2012-11-07  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r133712.
